--- a/css/global/global.css
+++ b/css/global/global.css
@@ -2,26 +2,37 @@
 /* Reset de estilos */
 /******************************/
 *{
-  font-family: Arial, Helvetica, sans-serif;
-  color: #111111;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+}
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #111111;
+}
+
+ul {
+  padding: 0px;
   list-style: none;
+}
+
+a {
   text-decoration: none;
   color: inherit;
-  max-width: 100%;
-  height: auto;
-  border: none;
 }
+
+img {
+  max-width: 100%;
+  min-width: max-content;
+  height: auto;
+  display: block;
+}
+
 
 /******************************/
 /* Configurações do Site */
 /******************************/
-
-img{
-  display: block;
-}
 
 img[src$=".jpg"]{
   border-radius: 4px;
