--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -3,6 +3,7 @@
 /******************************/
 
 .container{
+  border: solid 1px orange;
   max-width: 1200px;
   padding: 0px 20px;
   margin: 0px auto;
