Lista de bicicletas

--- a/css/global/global.css
+++ b/css/global/global.css
@@ -37,7 +37,11 @@ img[src$=".jpg"]{
   border-radius: 4px;
 }
 
-
+/* temporario */
+.margin-boton{
+  padding: 100px;
+  background-color: #d1d1d1
+}
 
 
 
