--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,20 @@
 
 /* Lista de bicicletas do Site */
 @import "bicicletas/bicicletas-lista.css";
+
+/* Artigo da tecnologia utilizada */
+@import "home/tecnologia.css";
+
+
+
+
+
+
+
+
+
+
+
+
+
+
