--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@
 /* Artigo da tecnologia utilizada */
 @import "home/tecnologia.css";
 
+/* Sessão de parceiros */
+@import "home/parceiros.css";
 
 
 
