--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,15 +1,15 @@
 /******************************/
 /* Reset de estilos */
 /******************************/
-*{
+* {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
 }
 
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    color: #111111;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #111111;
 }
 
 ul {
@@ -28,34 +28,16 @@ img {
   display: block;
 }
 
-
 /******************************/
 /* Configurações do Site */
 /******************************/
 
-img[src$=".jpg"]{
+img[src$=".jpg"] {
   border-radius: 4px;
 }
 
 /* temporario */
-.margin-boton{
+.margin-boton {
   padding: 100px;
-  background-color: #d1d1d1
+  background-color: #d1d1d1;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
