--- a/css/seguros/seguro.css
+++ b/css/seguros/seguro.css
@@ -1,44 +1,46 @@
-.seguro-bg{
-  background: var(--cor-11) url(../../img/dec/bottom-left.svg) no-repeat bottom 40px left 20px;
+.seguro-bg {
+  background: var(--cor-11) url(../../img/dec/bottom-left.svg) no-repeat bottom
+    40px left 20px;
 }
-.seguros{
+.seguros {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   padding: 60px 20px;
   align-items: center;
 }
-.seguros h2{
+.seguros h2 {
   grid-column: 1/-1;
 }
-.seguros-item{
+.seguros-item {
   display: grid;
   grid-template-columns: 1fr auto;
   padding: 32px 32px 32px 60px;
   background-color: var(--cor-12);
   border-radius: 4px;
 }
-.seguros-item h3{
+.seguros-item h3 {
   margin-bottom: 40px;
+  text-transform: uppercase;
 }
-.seguros-item span{
+.seguros-item span {
   grid-column: 2;
   display: block;
   text-align: right;
 }
-.seguros-item ul{
+.seguros-item ul {
   grid-column: 1/-1;
   margin-bottom: 32px;
 }
-.seguros-item li + li{
+.seguros-item li + li {
   margin-top: 20px;
 }
-.seguros-item li{
+.seguros-item li {
   display: flex;
   align-items: center;
   position: relative;
 }
-.seguros-item li::before{
+.seguros-item li::before {
   content: "";
   position: absolute;
   left: -21px;
@@ -46,14 +48,14 @@
   height: 9px;
   background-image: url("../../img/icones/lista.svg");
 }
-.seguros-item a{
+.seguros-item a {
   grid-column: 1/-1;
 }
 @media (max-width: 800px) {
-  .seguro-bg{
+  .seguro-bg {
     background: var(--cor-11);
   }
-  .seguros{
+  .seguros {
     grid-template-columns: 1fr;
   }
 }
