--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,4 +1,4 @@
-.header{
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -6,20 +6,24 @@
   flex-wrap: wrap;
   padding: 20px;
 }
+.header a {
+  padding: 10px 0;
+  margin: 2px 0;
+}
 
-.header-menu{
+.header-menu {
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
 }
 
-.header-menu a{
+.header-menu a {
   padding: 16px 0px;
   /* display: inline-block; */
   position: relative;
 }
 
-.header-menu a::after{
+.header-menu a::after {
   content: "";
   display: block;
   height: 2px;
@@ -27,45 +31,38 @@
   position: absolute;
   margin-top: 4px;
   width: 0px;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .header-menu a:hover::after,
-.header-menu a.ativo::after{
+.header-menu a.ativo::after {
   width: 100%;
 }
 
-
-
 /* Media Query */
-@media(max-width: 800px){
-  .header-menu{
+@media (max-width: 800px) {
+  .header-menu {
     gap: 20px;
   }
-  .header-menu a{
+  .header-menu a {
     background: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
   .header-menu a:hover,
-  .header-menu a.ativo{
+  .header-menu a.ativo {
     background: var(--cor-10);
   }
   .header-menu a::after {
     display: none;
   }
 }
-@media(max-width: 600px){
-  .header-menu{
+@media (max-width: 600px) {
+  .header-menu {
     gap: 12px;
   }
-  .header-menu a{
+  .header-menu a {
     padding: 8px 12px;
-    font-size: .875rem;
+    font-size: 0.875rem;
   }
 }
-
-
-
-
-
