--- a/css/seguros/seguro.css
+++ b/css/seguros/seguro.css
@@ -9,6 +9,9 @@
   padding: 60px 20px;
   align-items: center;
 }
+#seguros .seguros {
+  padding-top: 0px;
+}
 .seguros h2 {
   grid-column: 1/-1;
 }
