--- a/css/utilidades/formulario.css
+++ b/css/utilidades/formulario.css
@@ -12,6 +12,7 @@
   font: 500 1rem/1.5 "Poppins", sans-serif;
 }
 .form input[type="text"],
+.form input[type="tel"],
 .form input[type="email"],
 .form textarea {
   font: 400 1rem/1.5 "Roboto", sans-serif;
@@ -23,6 +24,7 @@
   width: 100%;
 }
 .form input[type="text"]:focus,
+.form input[type="tel"]:focus,
 .form input[type="email"]:focus,
 .form textarea:focus {
   outline: none;
